modules/application/_utility-api/security-group.tf
moved {
  from = aws_security_group.Utility
  to   = aws_security_group.utility
}

resource "aws_security_group" "utility" {
  depends_on  = [var.network]
  name        = "Utility-Service-Security-Group"
  description = "Security group for ECS services"
  vpc_id      = var.network.vpc

  ingress {
    from_port   = 8000
    to_port     = 8000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Utility-Security-Group"
  }
}
